first step move all to a submodule
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jcs/trunk@1590887 13f79535-47bb-0310-9956-ffa450edef68